# alpha-game-engine

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/camera/: camera.hpp  camera_ops.hpp
src/line/: line.hpp  line_ops.cpp  line_ops.hpp
src/logger/: logger.hpp  logger_ops.cpp  logger_ops.hpp
src/orientation/: orientation.hpp  orientation_ops.cpp  orientation_ops.hpp
src/vector/: vector.hpp  vector_ops.cpp  vector_ops.hpp
tests/line/: line.cpp
tests/orientation/: orientation.cpp
tests/vector/: vector.cpp
